syntax = "proto3";

package albato;

option go_package = "proto;albato";

service Albato {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
	rpc CustomUserRequest(UserRequest) returns (UserResponse) {}
}

message Message {
	string say = 1;
}

message UserRequest {
	string msg = 1;
	string msg2 = 2;
}

message UserResponse {
	string combined = 1;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
